# see-ml

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
compiler/analysis/: update_passes.cc  update_passes.h
compiler/backend/: arena_binder.cc  arena_binder.h  instruction_lowering.cc  instruction_lowering.h  native_emitter.cc  native_emitter.h  update_compiler.cc  update_compiler.h  update_types.h
compiler/diagnostics/: logger.cc  logger.h
compiler/frontend/: forward_builder.cc  forward_builder.h  sir.cc  sir.h
compiler/frontend/ingressor/: model_format.cc  model_format.h  model_reader.cc  model_reader.h  model_writer.cc  model_writer.h  resource_analyzer.cc  resource_analyzer.h
compiler/frontend/op/: op_builder.cc  op_builder.h
compiler/frontend/parser/: graph_build.h  parser.cc  parser.h  sema.cc  sema.h  value_resolver.cc  value_resolver.h
compiler/frontend/sir/: sir.cc
compiler/trainer/: update_passes.cc  update_passes.h
docs/: formats.md  usage.md
runtime/: batch_pipeline.cc  batch_pipeline.h  checkpoint.cc  checkpoint.h  dataset.cc  dataset.h  durable_io.cc  durable_io.h  plan_validator.cc  plan_validator.h  update_engine.cc  update_engine.h  update_kernels.cc  update_kernels.h
source/: hash.h  parallel_for.cc  parallel_for.h  smf.cc  smf.h  update_types.h
source/sir/: sir.cc  sir.h
source/update/: native_emitter.cc  native_emitter.h  smf.cc  smf.h  update_compiler.cc  update_compiler.h  update_passes.cc  update_passes.h  update_types.h
source/update_runtime/: dataset.cc  dataset.h  update_engine.cc  update_engine.h  update_kernels.cc  update_kernels.h
source/utility/logger/: logger.cc
test/: README.md  fuzz_binary_formats.cc  test_update_system.cc
test/compiler/: forward_builder_test.cc  model_io_test.cc  native_emitter_test.cc  parser_test.cc  resource_analyzer_test.cc  sir_test.cc  update_compiler_test.cc  update_passes_test.cc
test/cpp/update/: test_update_system.cc
test/framework/: seetest.cc  seetest.h  seetest_main.cc
test/runtime/: dataset_test.cc  kernels_test.cc  update_engine_test.cc
test/source/: hash_test.cc  parallel_for_test.cc  smf_test.cc
test/support/: builders.cc  builders.h  scoped_temp_dir.cc  scoped_temp_dir.h
test/system/: update_system_test.cc
tool/: export_model.py  seeml_seeu_dump.cc  seeml_update_compile.cc
tools/: export_model.py  seeml_update_compile.cc
